--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'blog-8y5.pages.dev'
 languageCode = 'en-us'
 title = 'My Professional Blog'
 theme = "hugo-theme-m10c"
